[package]
name = "surikafka"
version = "0.1.0"
authors = ["Danny Browning <danny.browning@protectwise.com>"]

[dependencies]
bytes = "~0.4"
env_logger = "*"
error-chain = "~0.12"
futures = "~0.1"
log = "~0.4"
rdkafka = "~0.17"
shutdown = { git = "https://github.com/dbcfd/rs-shutdown.git" }
structopt = "~0.2"
tokio = "~0.1"
tokio-uds = "~0.2"